package br.edu.ifpb.baralhos;

public class BaralhoUno extends Baralho {
}
